--- a/index.html
+++ b/index.html
@@ -23,7 +23,104 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+<header>
+  <img src="img/paul.png" alt="logo paul">
+  <button type="button" name="La maison PAUL"></button>
+  <button type="button" name="Nos produits"></button>
+  <button type="button" name="Nos engagements"></button>
+</header>
+
+<main>
+    <section>
+          <nav>
+            <ul>
+              <a href="https://www.paul.fr/fr/content/6-notre-histoire">La maison Paul</a>
+              <a href="https://www.paul.fr/fr/3-nos-produits/">nos produits</a>
+              <a href="https://www.paul.fr/fr/engagement/"></a>
+              <a href="https://www.paul.fr/fr/nos-boutiques"></a>
+            </ul>
+
+          </nav>
+          <h1></h1>
+          <p></p>
+          <img src="" alt="">
+
+    </section>
+
+    <div class="">
+          <div class="">
+              <button type="button" name="button"></button>
+              <p></p>
+          </div>
+          <div class="">
+              <button type="button" name="button"></button>
+              <p></p>
+          </div>
+          <div class="">
+              <button type="button" name="button"></button>
+              <p></p>
+          </div>
+          <p></p>
+          <img src="" alt="">
+    </div>
+
+    <div class="">
+      <h3></h3>
+      <article class="article1">
+          <header class="header article1">
+            <h4></h4>
+          </header>
+          <section class="main article1">
+            <img src="" alt="">
+            <p></p>
+          </section>
+          <footer class="footer article1">
+              <nav>
+                <a href="https://www.facebook.com/">facebook</a>
+                <a href="https://www.twitter.com/">twitter</a>
+                <a href="#">voir</a>
+              </nav>
+          </footer>
+
+  </article>
+  <article class="article2">
+      <header class="header article2">
+        <h4></h4>
+      </header>
+      <section class="main article2">
+        <img src="" alt="">
+        <p></p>
+      </section>
+      <footer class=footer article2>
+          <nav>
+              <a href="https://www.facebook.com/">facebook</a>
+              <a href="https://www.twitter.com/">twitter</a>
+              <a href="#">voir</a>
+          </nav>
+      </footer>
+
+    </article>
+  <article class="article3">
+      <header class="header article3">
+        <h4></h4>
+      </header>
+      <section class="main article3">
+        <img src="" alt="">
+        <p></p>
+      </section>
+      <footer class="footer article3">
+          <nav>
+            <a href="https://www.facebook.com/">facebook</a>
+            <a href="https://www.twitter.com/">twitter</a>
+              <a href="#">voir</a>
+          </nav>
+      </footer>
+
+  </article>
+</div>
+</main>
+<footer></footer>
+  </head>
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
